remove header, fix content overflow

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,6 +2,7 @@
   margin-left: 100px;
   margin-right: 100px;
   min-height: 90vh;
+  overflow: auto;
   max-height: 90vh;
   height: 90vh;
   @media screen and (max-width: 600px) {
